# uapi

./: .cirrus.yml  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
uapi/: Cargo.toml  build.rs  coverage  for_coverage
uapi-proc/: Cargo.toml
uapi-proc/src/: lib.rs
uapi/examples/: ex1.rs
uapi/src/: black_box.c  docs.rs  fd.rs  lib.rs  macros.rs  pod.rs  result.rs  uninit.rs  util.rs
uapi/src/c/: linux.rs  mod.rs
uapi/src/dir/: mod.rs
uapi/src/errno/: mod.rs
uapi/src/fcntl/: linux.rs  mod.rs
uapi/src/file/: linux.rs  mod.rs
uapi/src/ioctl/: bsd.rs  linux.rs  mod.rs
uapi/src/mount/: linux.rs  mod.rs
uapi/src/other/: linux.rs  mod.rs
uapi/src/poll/: linux.rs  mod.rs
uapi/src/process/: linux.rs  mod.rs
uapi/src/ptrace/: mod.rs
uapi/src/sched/: linux.rs  mod.rs
uapi/src/signal/: linux.rs  mod.rs
uapi/src/socket/: cmsg.rs  linux.rs  mod.rs  sockopt.rs
uapi/src/socket/linux/: mod.rs  netlink.rs
uapi/src/timer/: linux.rs  mod.rs
uapi/src/ustr/: as_ustr.rs  bstr.rs  bytes.rs  eq.rs  into.rs  mod.rs  read.rs  ustr.rs  ustring.rs  ustrptr.rs
uapi/tests/: chdir.rs  chroot.rs  close_range.rs  dupfd.rs  exec1.rs  exec2.rs  fcntl_lck.rs  mknod_mode.rs  mknodat_mode.rs  open_mode.rs  openat2_mode.rs  openat_mode.rs  pivot_root.rs  process1.rs  process2.rs  process3.rs  process4.rs  process5.rs  process6.rs  sched.rs  sched2.rs  sched3.rs  sched4.rs  sethostname.rs  setrlimit.rs  setuid1.rs  setuid2.rs  setuid3.rs  signal.rs  signalfd.rs  unshare.rs
uapi/tests/main/: fd.rs  main.rs  pod.rs  result.rs  util.rs
uapi/tests/main/dir/: mod.rs
uapi/tests/main/errno/: mod.rs
uapi/tests/main/fcntl/: linux.rs  mod.rs
uapi/tests/main/file/: linux.rs  mod.rs
uapi/tests/main/ioctl/: linux.rs  mod.rs
uapi/tests/main/mount/: linux.rs  mod.rs  new_linux_api.rs
uapi/tests/main/other/: linux.rs  mod.rs
uapi/tests/main/poll/: linux.rs  (+1 more)
uapi/tests/mocked/: main.rs
(+22 files in other folders)
