[package]
name = "uapi-proc"
version = "0.0.5"
authors = ["Julian Orth <ju.orth@gmail.com>"]
edition = "2018"
description = "Internal macros for the uapi crate. DO NOT USE!"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mahkoh/uapi"

[lib]
proc-macro = true

[dependencies]
libc = "0.2"
quote = "1"
proc-macro2 = "1"
syn = "2"
regex = { version = "1", default_features = false, features = ["std"] }
lazy_static = "1"
