[package]
name = "uapi"
version = "0.2.10"
authors = ["Julian Orth <ju.orth@gmail.com>"]
edition = "2018"
description = "Wrappers for OS APIs on UNIX-like platform"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mahkoh/uapi"
keywords = ["unix", "linux", "macos", "osx", "bsd"]
categories = ["os::unix-apis"]
readme = "../README.md"

[dependencies]
libc = "0.2"
cfg-if = "1"
proc = { package = "uapi-proc", version = "0.0.5", path = "../uapi-proc" }

[dev-dependencies]
tempfile = "3.0.5"
testutils = { path = "../uapi-testutils" }

[build-dependencies]
cc = "1"

[package.metadata.docs.rs]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
    "x86_64-unknown-freebsd",
    "x86_64-apple-darwin",
]
